--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "auto-api-mcp",
-  "version": "1.0.13",
-  "description": "Auto API - YApi接口信息获取工具，支持MCP协议",
+  "name": "auto-yapi-mcp",
+  "version": "1.0.0",
+  "description": "yapi-mcp - YApi接口信息获取工具，支持MCP协议",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "auto-api-mcp": "./dist/index.js"
+    "auto-yapi-mcp": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
@@ -28,9 +28,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/twelve-web/auto-api-mcp.git"
+    "url": "https://github.com/twelve-web/yapi-mcp.git"
   },
-  "homepage": "https://github.com/twelve-web/auto-api-mcp#readme",
+  "homepage": "https://github.com/twelve-web/yapi-mcp#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.12.1",
     "dotenv": "^16.5.0",
