--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-yapi-mcp",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "yapi-mcp - YApi接口信息获取工具，支持MCP协议",
   "main": "dist/index.js",
   "type": "module",
@@ -34,10 +34,12 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.12.1",
     "dotenv": "^16.5.0",
+    "node-fetch": "^3.3.2",
     "zod": "^3.25.41"
   },
   "devDependencies": {
     "@types/node": "^22.10.6",
+    "@types/node-fetch": "^3.0.3",
     "typescript": "^5.7.3"
   },
   "engines": {
